2010-08-29 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: fixed upload the new version of ${TREE_FILE},
	  needed by snap.php to create sdcc snapshots web page;
	  cosmetic changes

2010-08-22 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: snapshot files moved to SourceForge FRS

2010-07-03 Borut Razem <borut.razem AT siol.net>

	* .sdcc_builder/profile: added dos utils aliases, ndeeded on Ubuntu

2010-07-02 Borut Razem <borut.razem AT siol.net>

	* packages/build.gmp_mpfr/Makefile: updated to gmp 5.0.2, mpfr 3.0.0,
	  mpc 0.8.2

2010-04-18 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefile: updated to gcc 4.5.0,
	  binutils 2.20.1, migwrt 3.18
	* packages/build.gmp_mpfr/Makefile: updated to gmp 5.0.1, mpfr 2.4.2,
	  mpc 0.8.1

2010-04-08 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh, etc/dcf_list: allow comments in etc/dcf_list

2010-04-04 Borut Razem <borut.razem AT siol.net>

	* .sdcc_builder/profile:
	  separate exports form definitons
	* bin/dcf.sh:
	  fixed rm_old_versions() bug
	* crontab.txt:
	  added FreeBSD i386 on freebsd-i386.neurotica.com,
	  NetBSD sparc64 on mypants.neurotica.com,
	  OpenBSD i386 on openbsd-i386.neurotica.com

2010-04-03 Borut Razem <borut.razem AT siol.net>

	* crontab.txt, sdcc-cf/etc/dcf_list:
	  added NetBSD i386 on netbsd-i386.neurotica.com,
	  Solaris sparc on dev.neurotica.com,
	  Solaris i386 on dev.neurotica.com

2010-04-01 Borut Razem <borut.razem AT siol.net>

	* .sdcc_builder/profile:
	  export HOSTNAME
	* bin/dcf.sh:
	  removed definition of unneeded env variables WEBSNAPSHOTDIR
	  WEBREGTESTDIR and WEBCHANGELOGDIR

2010-03-29 Borut Razem <borut.razem AT siol.net>

	* packages/build.rsync: added

2010-03-21 Borut Razem <borut.razem AT siol.net>

	* packages/build.wget/Makefile: updated to wget 1.12

2010-02-24 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefile: updated to gcc 4.4.3
	  binutils 2.20, migwrt 3.16, w32api 3.14
